# useless-macros

./: .pre-commit-config.yaml  .rustfmt  Cargo.toml
.github/workflows/: lint-and-test.yaml  release.yaml
crates/add_setters/: Cargo.toml
crates/add_setters/src/: implementation.rs  lib.rs
crates/add_setters/src/implementation/: implementation.rs  mod.rs  setter_configs.rs  setter_methods.rs
crates/add_setters/tests/: integration.rs
crates/getter_maker/: Cargo.toml
crates/getter_maker/src/: lib.rs
crates/getter_maker/src/implementation/: getter_configs.rs  getter_methods.rs  impl_block.rs  implementation.rs  mod.rs
crates/getter_maker/tests/: integration.rs
crates/setter_maker/: Cargo.toml  README.md
crates/setter_maker/src/: lib.rs
crates/setter_maker/src/basic_setters/: mod.rs
crates/setter_maker/src/basic_setters/implementation/: implementation.rs  mod.rs  setter_configs.rs  setter_methods.rs
crates/setter_maker/src/builder_setters/: mod.rs
crates/setter_maker/src/builder_setters/implementation/: impl_block.rs  implementation.rs  mod.rs  setter_configs.rs  setter_methods.rs
crates/setter_maker/src/implementation/: implementation.rs  mod.rs  setter_configs.rs  setter_methods.rs
crates/setter_maker/tests/: integration.rs
src/: lib.rs
