[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/madnoberson/useless-macros"
edition = "2024"
rust-version = "1.85.0"

[package]
name = "useless_macros"
description = "Useless, though fancy, rust macros."
version = "0.1.0"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["setter_maker"]
setter_maker = ["useless_setter_maker"]

[dependencies]
useless_setter_maker = { version = "0.1.*", path = "crates/setter_maker", optional = true }
