[package]
name = "useless_setter_maker"
description = "Macro for generating setter methods."
version = "1.2.0"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
